# python-project-50

./: Makefile  README.md  diff.txt  pyproject.toml  result.txt  setup.cfg
.github/workflows/: testing.yml
gendiff/: __init__.py
gendiff/modules/: gendiff.py  parser.py
gendiff/scripts/: gendiff.py  gendiff_scrypt.py
tests/: test_gendiff.py
tests/fixtures/: fourth_file.json  third_file.json
